exercises/069/answer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-web-svc
spec:
  selector:
    app: ingress-web
  ports:
    - port: 80
      targetPort: 80
